change architecture for user logic, add UsersService and UsersRepository

--- a/WebAPI.csproj
+++ b/WebAPI.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Docs\architecture\decisions\" />
+    <Folder Include="Docs\development\" />
+    <Folder Include="Docs\business\" />
     <Folder Include="Migrations\" />
   </ItemGroup>
 
