--- a/appsettings.json
+++ b/appsettings.json
@@ -26,5 +26,11 @@
 
     // Время жизни Refresh токена (дни)
     "RefreshTokenExpiryDays": 7
+  },
+  "SelectelS3": {
+    "AccessKey": "10b5c341c5b54856a7082c9cc41ad661",
+    "SecretKey": "bb554e07f8a6483e9b4572923dede470",
+    "BucketName": "home-chef-bucket",
+    "ServiceURL": "https://s3.ru-7.storage.selcloud.ru"
   }
 }
