--- a/appsettings.json
+++ b/appsettings.json
@@ -31,6 +31,7 @@
     "AccessKey": "10b5c341c5b54856a7082c9cc41ad661",
     "SecretKey": "bb554e07f8a6483e9b4572923dede470",
     "BucketName": "home-chef-bucket",
+    "ContainerId": "b28b712b-a789-466f-af62-d30a0d79fda3",
     "ServiceURL": "https://s3.ru-7.storage.selcloud.ru"
   }
 }
