add dump mysql, connect to docker mysql/redis

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3307;Database=smartgymdb;User=root;Password=1234;",
+    "DefaultConnection": "Server=localhost;Port=3307;Database=homechefdb;User=root;Password=1234;",
     "Redis": "localhost:6379"
   },
   "Jwt": {
